# productre

./: .coverage  .gitignore  .pre-commit-config.yaml  pyproject.toml
app/: main.py
app/api/: session.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: product.py
app/core/: config.py
app/crud/: __init__.py  base.py  crud_product.py
app/db/: base.py  session.py
app/models/: __init__.py  order.py  product.py
app/schemas/: __init__.py  order_schema.py  product_schema.py
app/tests/: conftest.py
app/tests/api/api_v1/: test_products.py
migrations/: env.py
migrations/versions/: fb3ac42a7a2c_create_table.py
tests/: __init__.py  conftest.py
tests/api/: test_session.py
tests/api/api_v1/: test_products.py
tests/api/api_v1/endpoints/: test_productmoc.py  test_products.py
tests/crud/: test_base.py
tests/utils/: __init__.py  producthelp.py
